<<<<<<< HEAD:Juegos_Prototipo/fished/Scene/Tiendas/Amuletos.tscn
[gd_scene load_steps=13 format=3 uid="uid://bs0lx2ya50xsy"]

[ext_resource type="Script" uid="uid://uin6g7kvlrx1" path="res://amuletos.gd" id="1_cs1jx"]
[ext_resource type="Texture2D" uid="uid://dl37hr7gwx2i6" path="res://Assets/Tienda/FondoTienda.png" id="2_iag6h"]
[ext_resource type="PackedScene" uid="uid://brpgvacmdou1g" path="res://Scene/Tiendas/InterfazTienda.tscn" id="2_q6bci"]
[ext_resource type="Texture2D" uid="uid://c6egglhaqguxq" path="res://Assets/Tienda/Estante.png" id="3_q6bci"]
[ext_resource type="Texture2D" uid="uid://bgjamgmn483dq" path="res://Assets/Vendedores/Tulio/Idle.png" id="4_qfkyy"]
[ext_resource type="AudioStream" uid="uid://caac6rhqvj27" path="res://Assets/Musicas/Cuphead OST - Porkrind's Shop [Music].mp3" id="5_a60lx"]
[ext_resource type="Texture2D" uid="uid://cexr6oowd7ha" path="res://Assets/Amuletos/amuletocelestial.png" id="6_p1cxj"]
[ext_resource type="Texture2D" uid="uid://dvwwbhlecfeva" path="res://Assets/Amuletos/amuletocomun.png" id="7_0x10d"]
[ext_resource type="Texture2D" uid="uid://dwtt7pq6omuhj" path="res://Assets/Amuletos/amuletoexotico.png" id="8_jdtkd"]
[ext_resource type="Texture2D" uid="uid://c41yiq1c787f1" path="res://Assets/Amuletos/amuletomasplata.png" id="9_m4i73"]
[ext_resource type="Texture2D" uid="uid://bm2qtf1ffibbc" path="res://Assets/Amuletos/amuletosecreto.png" id="10_j657u"]
[ext_resource type="Texture2D" uid="uid://3m2t4d41dgt2" path="res://Assets/Amuletos/amuletoraro.png" id="11_kmp5t"]
=======
[gd_scene load_steps=14 format=3 uid="uid://bs0lx2ya50xsy"]

[ext_resource type="Script" uid="uid://uin6g7kvlrx1" path="res://tienda.gd" id="1_yk4jq"]
[ext_resource type="AudioStream" uid="uid://caac6rhqvj27" path="res://Assets/Musicas/Cuphead OST - Porkrind's Shop [Music].mp3" id="2_3s1dv"]
[ext_resource type="Texture2D" uid="uid://bgjamgmn483dq" path="res://Assets/Tulio/Idle.png" id="2_j3fex"]
[ext_resource type="Texture2D" uid="uid://chl8q25ypf8w2" path="res://Assets/Tulio/Sapito.png" id="2_jcf2x"]
[ext_resource type="Texture2D" uid="uid://dl37hr7gwx2i6" path="res://Assets/Tienda/FondoTienda.png" id="2_k3vqj"]
[ext_resource type="Texture2D" uid="uid://c6egglhaqguxq" path="res://Assets/Tienda/Estante.png" id="3_fs1ct"]
[ext_resource type="Texture2D" uid="uid://cexr6oowd7ha" path="res://Assets/Amuletos/amuletocelestial.png" id="5_hf6te"]
[ext_resource type="Texture2D" uid="uid://dvwwbhlecfeva" path="res://Assets/Amuletos/amuletocomun.png" id="6_nnsdc"]
[ext_resource type="Texture2D" uid="uid://dwtt7pq6omuhj" path="res://Assets/Amuletos/amuletoexotico.png" id="7_1ieev"]
[ext_resource type="Texture2D" uid="uid://c41yiq1c787f1" path="res://Assets/Amuletos/amuletomasplata.png" id="8_fs1ct"]
[ext_resource type="Texture2D" uid="uid://bm2qtf1ffibbc" path="res://Assets/Amuletos/amuletosecreto.png" id="9_1ieev"]
[ext_resource type="Texture2D" uid="uid://3m2t4d41dgt2" path="res://Assets/Amuletos/amuletoraro.png" id="10_fs1ct"]
>>>>>>> fb1b32cf52eff9f0526d1048e46ec4bb64b1f2d3:Juegos_Prototipo/fished/Scene/tienda.tscn

[sub_resource type="AtlasTexture" id="AtlasTexture_wspw5"]
atlas = ExtResource("2_jcf2x")
region = Rect2(0, 5.5, 53, 57)

[node name="Tienda" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cs1jx")
pos_normal = Vector2(850, 450)
pos_bienvenida = Vector2(850, 450)
pos_despedida = Vector2(849, 460)
pos_reaccion = Vector2(850, 450)

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = -5.0
offset_right = 1027.0
offset_bottom = 1019.0
scale = Vector2(1.12044, 0.668824)
texture = ExtResource("2_iag6h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(223, 200)
scale = Vector2(0.320001, 0.303064)
texture = ExtResource("3_q6bci")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(223, 370)
scale = Vector2(0.320001, 0.303064)
texture = ExtResource("3_q6bci")

[node name="Tulio" type="Sprite2D" parent="."]
position = Vector2(824, 530)
scale = Vector2(0.6, 0.617)
texture = ExtResource("4_qfkyy")

[node name="LabelDoblones" type="Label" parent="."]
layout_mode = 0
offset_left = 645.0
offset_top = 100.0
offset_right = 685.0
offset_bottom = 123.0
scale = Vector2(1.47168, 1.4708)

[node name="Salir" type="Button" parent="."]
layout_mode = 0
offset_left = 963.0
offset_top = 93.0
offset_right = 1152.0
offset_bottom = 229.0
scale = Vector2(1, 0.967945)
text = "Volver"

[node name="AudioEfectos" type="AudioStreamPlayer" parent="."]
volume_db = 8.0

[node name="AudioTienda" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_a60lx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Articulo1" type="TextureButton" parent="CanvasLayer"]
custom_minimum_size = Vector2(64, 64)
offset_left = 37.0
offset_top = 222.0
offset_right = 107.0
offset_bottom = 292.0
scale = Vector2(1.96, 2.16)
texture_normal = ExtResource("6_p1cxj")

[node name="Articulo2" type="TextureButton" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 71.0
offset_right = 86.0
offset_bottom = 141.0
scale = Vector2(2.52681, 2.47619)
texture_normal = ExtResource("7_0x10d")

[node name="Articulo3" type="TextureButton" parent="CanvasLayer"]
offset_left = 150.0
offset_top = 72.0
offset_right = 220.0
offset_bottom = 142.0
scale = Vector2(1.8, 1.72)
texture_normal = ExtResource("8_jdtkd")

[node name="Articulo4" type="TextureButton" parent="CanvasLayer"]
offset_left = 267.0
offset_top = 219.0
offset_right = 337.0
offset_bottom = 289.0
scale = Vector2(1.4, 1.90434)
texture_normal = ExtResource("9_m4i73")

[node name="Articulo5" type="TextureButton" parent="CanvasLayer"]
offset_left = 144.0
offset_top = 220.0
offset_right = 214.0
offset_bottom = 290.0
scale = Vector2(1.84, 2.28)
texture_normal = ExtResource("10_j657u")

[node name="Articulo6" type="TextureButton" parent="CanvasLayer"]
offset_left = 245.0
offset_top = 88.0
offset_right = 315.0
offset_bottom = 158.0
scale = Vector2(1.96, 1.96)
texture_normal = ExtResource("11_kmp5t")

[node name="LabelInfo" type="Label" parent="CanvasLayer"]
offset_left = 168.0
offset_top = 531.0
offset_right = 208.0
offset_bottom = 554.0

<<<<<<< HEAD:Juegos_Prototipo/fished/Scene/Tiendas/Amuletos.tscn
[node name="InterfazTienda" parent="." instance=ExtResource("2_q6bci")]
offset_right = 1150.0
offset_bottom = 80.0
=======
[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(479, 386)
scale = Vector2(2.87692, 2.20371)
texture = SubResource("AtlasTexture_wspw5")
>>>>>>> fb1b32cf52eff9f0526d1048e46ec4bb64b1f2d3:Juegos_Prototipo/fished/Scene/tienda.tscn
